Photo upload and delete.

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -12,5 +12,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings":{
+    "Cloudname": "dx3cjsrou",
+    "ApiKey": "995777147851996",
+    "ApiSecret": "mK6UsJtNhSGeQkmF_Yi0kHlc5b0"
+  }
 }
